# libashmem

./: CMakeLists.txt  README.md  ashmem.cpp  ashmem_test.cpp
include/: ashm.h
